5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1888_1622.log
== TEST (2019-07-09 16:06:26) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):

		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:32) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
-- ERROR:
File "XXXX", line 7
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:42) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:07:16) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	print(vetent[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:24) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	print(vetent[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:06) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:20) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
print(pessoas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:10:55) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
print(pessoas)
-- EXECUTION TIME:
1.03982
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]
---- correct output:
28
---- user output:
0
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]
---- correct output:
49
---- user output:
-4
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]
---- correct output:
7
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:20) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
		
print(pessoas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:48) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
		
print(pessoas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:54) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
		
print(pessoas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:44:47) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
		
print(pessoas)
-- EXECUTION TIME:
1.15707
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]
---- correct output:
28
---- user output:
0
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]
---- correct output:
49
---- user output:
-4
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]
---- correct output:
7
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:50) 
-- CODE:
from numpy import*

vetent = array(eval(input("entrada no onibus: ")))
vetsai = array(eval(input("saida do onibus: ")))

for i in range(size(vetent)):
	for j in range(size(vetsai)):
		pessoas = vetent[i]-vetsai[j]
		
print(pessoas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
